[gd_scene load_steps=3 format=2]

[ext_resource path="res://Debug/DebugWindow/DebugControlWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Debug/Detection/DebugDetectionState.gd" type="Script" id=2]

[node name="DebugDetectionState" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Window" parent="." instance=ExtResource( 1 )]
margin_left = -1.0
margin_right = 300.0
margin_bottom = 346.0
WindowName = "Detection State"

[node name="VBoxContainer" type="VBoxContainer" parent="Window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0

[node name="Detections" type="ItemList" parent="Window/VBoxContainer"]
unique_name_in_owner = true
margin_right = 301.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
same_column_width = true
fixed_column_width = 300

[node name="TimerHBoxContainer" type="HBoxContainer" parent="Window/VBoxContainer"]
margin_top = 104.0
margin_right = 301.0
margin_bottom = 118.0

[node name="TimerLabel" type="Label" parent="Window/VBoxContainer/TimerHBoxContainer"]
margin_right = 45.0
margin_bottom = 14.0
text = "Timer: "

[node name="TimerValue" type="Label" parent="Window/VBoxContainer/TimerHBoxContainer"]
unique_name_in_owner = true
margin_left = 49.0
margin_right = 69.0
margin_bottom = 14.0
text = "0.0"

[node name="DetectionLevelHBoxContainer" type="HBoxContainer" parent="Window/VBoxContainer"]
margin_top = 122.0
margin_right = 301.0
margin_bottom = 136.0

[node name="LevelsLabel" type="Label" parent="Window/VBoxContainer/DetectionLevelHBoxContainer"]
margin_right = 49.0
margin_bottom = 14.0
text = "Levels: "

[node name="LevelsValue" type="Label" parent="Window/VBoxContainer/DetectionLevelHBoxContainer"]
unique_name_in_owner = true
margin_left = 53.0
margin_right = 69.0
margin_bottom = 14.0
text = "(0)"

[node name="DetectionHBoxContainer" type="HBoxContainer" parent="Window/VBoxContainer"]
margin_top = 140.0
margin_right = 301.0
margin_bottom = 154.0

[node name="DetectionLabel" type="Label" parent="Window/VBoxContainer/DetectionHBoxContainer"]
margin_right = 109.0
margin_bottom = 14.0
text = "Detection Level: "

[node name="DetectionValue" type="Label" parent="Window/VBoxContainer/DetectionHBoxContainer"]
unique_name_in_owner = true
margin_left = 113.0
margin_right = 151.0
margin_bottom = 14.0
text = "NONE"

[connection signal="WindowClosed" from="Window" to="." method="_on_Window_WindowClosed"]
[connection signal="item_selected" from="Window/VBoxContainer/Detections" to="." method="_on_Detections_item_selected"]
